# openclaw-installer

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
doc/: README.md  REQUIREMENTS.md  TECHNICAL.md  setup-https.sh
scripts/: build-mac.sh  build-windows.ps1
scripts/remote/: README.md  claude-code-skill.md  install.ps1  install.sh  setup-https.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cli.rs  config.rs  crypto.rs  env_check.rs  gateway.rs  helpers.rs  install.rs  integration.rs  lib.rs  ssh.rs
src/components/: CategoryTabs.tsx  ErrorBoundary.tsx  PlaceholderPage.tsx  PlatformCard.tsx  SearchBar.tsx  StepIndicator.tsx  WizardShell.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  checkbox.tsx  input.tsx  label.tsx  select.tsx  tooltip.tsx
src/lib/: animations.ts  channels-data.ts  db.ts  hooks.ts  tauri.ts
src/pages/: ChannelsPage.tsx  CommunicationPanel.tsx  ConfigPanel.tsx  ControlPanel.tsx  InstallPage.tsx  SSHConfigPage.tsx  StartPage.tsx  SystemCheckPage.tsx  TargetSelectPage.tsx
src/stores/: wizard-store.ts
src/types/: app.ts
